clusters/my-cluster/longhorn/ingress-to-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-front
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: loghorn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: longhorn-frontend
                port:
                  number: 80
